0_5添加商品完成

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -29,3 +29,12 @@ body,
 .el-scrollbar_wrap {
   overflow-x: hidden;
 }
+.el-steps{
+  margin: 15px 0;
+}
+.el-step_title{
+  font-size: 15px;
+}
+.ql-editor{
+  min-height: 300px;
+}
